--- a/src/app/shared/nav-crud/nav-crud.component.html
+++ b/src/app/shared/nav-crud/nav-crud.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Sispay</a>
+    <a class="navbar-brand" href="#">
+      <img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFBjAikyfoWXQ/company-logo_200_200/0?e=2159024400&v=beta&t=ScZYbE_JvdE9oZXabnESeP137diF9NTiREgVRs7tlIY" alt="Logo" style="width:40px;"> 
+      Sispay
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
